--- a/homework_2/todo_list_app/src/App.css
+++ b/homework_2/todo_list_app/src/App.css
@@ -27,3 +27,20 @@ body {
 
 }
 
+.new_user_wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.login_wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.register_wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
