--- a/homework_2/todo_list_app/src/App.css
+++ b/homework_2/todo_list_app/src/App.css
@@ -30,17 +30,19 @@ body {
 .new_user_wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+
   align-items: center;
 }
 
 .login_wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .register_wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
