--- a/homework_3/todo_list_app/src/App.css
+++ b/homework_3/todo_list_app/src/App.css
@@ -27,6 +27,16 @@ body {
 
 }
 
+.todo {
+  display: flex;
+}
+
+.todo_right {
+  display: flex;
+  justify-content: center;
+
+}
+
 .new_user_wrapper {
   display: flex;
   flex-direction: row;
